# FFmpeg4Cmake

./: ReadMe.md
app/: CMakeLists.txt  build.gradle
app/src/androidTest/java/com/wepon/ffmpeg4cmake/: ExampleInstrumentedTest.java
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: native-lib.cpp
app/src/main/java/com/wepon/ffmpeg4cmake/: FFVideoPlayer.java  MainActivity.java
app/src/main/res/layout/: activity_main.xml
app/src/main/res/values/: strings.xml
app/src/test/java/com/wepon/ffmpeg4cmake/: ExampleUnitTest.java
